--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.44",
+    "autoprefixer": "10.4.5",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
+    "postcss": "8.4.12",
+    "tailwindcss": "3.0.24",
     "typescript": "4.6.3"
   }
 }
