docs: add necessary env variables to example file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_SECRET_GRIST_DOMAIN=your-grist-instance-domain # keep this private!
+NEXT_SECRET_GRIST_DOC_ID=wj6g01bat # replace with the doc ID you want to access
+NEXT_SECRET_GRIST_TABLE=Tablename # replace with the table name you want to access (attention: often the table name is uppercased!)
 NEXT_SECRET_GRIST_API_KEY=your-secret-api-key # keep this private!
 NEXT_PUBLIC_MAPTILER_API_KEY=your-maptiler-api-key # make sure to restrict this API key to the domains you're deploying to (it's visible to the public)
