--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "eslint --ext js,jsx,ts,tsx .",
     "lint-fix": "npm run lint -- --fix",
+    "test": "jest --maxWorkers=50% --coverage --collectCoverageFrom='./(src|pages)/**/*.ts(x)?' --collectCoverageFrom='!./(src|pages)/**/*.stories.ts(x)?' --collectCoverageFrom='!./src/mocks/**/*'",
+    "test:watch": "npm run test -- --watch",
+    "test:ci": "jest --runInBand",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
@@ -18,6 +21,9 @@
     "swr": "1.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "14.2.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.45",
     "@typescript-eslint/eslint-plugin": "5.25.0",
@@ -31,6 +37,9 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.30.0",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
+    "jest-fetch-mock": "3.0.3",
     "postcss": "8.4.14",
     "prettier": "2.6.2",
     "tailwindcss": "3.0.24",
