--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "swr": "1.2.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "7.5.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "14.2.0",
     "@types/node": "17.0.21",
+    "@types/node-fetch": "2.6.2",
     "@types/react": "17.0.47",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
@@ -40,6 +42,7 @@
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "jest-fetch-mock": "3.0.3",
+    "node-fetch": "2.6.7",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
     "tailwindcss": "3.1.6",
