--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grist-external-dashboard-poc",
+  "name": "wegweiser-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
