--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_SECRET_GRIST_LABELS_TABLE=LabelsTabel # replace with the table name you wan
 NEXT_SECRET_GRIST_TEXTS_TABLE=TextsTableName # replace with the table name you want to access (attention: often the table name is uppercased!)
 NEXT_SECRET_GRIST_API_KEY=your-secret-api-key # keep this private!
 NEXT_PUBLIC_MAPTILER_API_KEY=your-maptiler-api-key # make sure to restrict this API key to the domains you're deploying to (it's visible to the public)
+NEXT_PUBLIC_MAPTILER_STYLE_URL=https://api.maptiler.com/maps/bright/style.json
