--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "type-check": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
+    "date-fns": "2.29.3",
     "maplibre-gl": "2.1.6",
     "next": "12.1.0",
     "react": "17.0.2",
