--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swiper": "8.4.3",
     "use-debounce": "8.0.4"
   },
   "devDependencies": {
