--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "use-debounce": "8.0.4"
   },
   "devDependencies": {
+    "@technologiestiftung/semantic-release-config": "1.1.0",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "14.2.0",
