--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 NEXT_SECRET_GRIST_DOMAIN=your-grist-instance-domain # keep this private!
-NEXT_SECRET_GRIST_DOC_ID=sNVTrd0hH6qex4BpbnU8if # replace with the doc ID you want to access
-NEXT_SECRET_GRIST_RECORDS_TABLE=RecordsTableName # replace with the table name you want to access (attention: often the table name is uppercased!)
-NEXT_SECRET_GRIST_LABELS_TABLE=LabelsTabel # replace with the table name you want to access (attention: often the table name is uppercased!)
-NEXT_SECRET_GRIST_TEXTS_TABLE=TextsTableName # replace with the table name you want to access (attention: often the table name is uppercased!)
-NEXT_SECRET_GRIST_API_KEY=your-secret-api-key # keep this private!
-NEXT_PUBLIC_MAPTILER_API_KEY=your-maptiler-api-key # make sure to restrict this API key to the domains you're deploying to (it's visible to the public)
+NEXT_SECRET_GRIST_DOC_ID=sNVTrd0hH6qex4BpbnU8if     # replace with the doc ID you want to access
+NEXT_SECRET_GRIST_RECORDS_TABLE=RecordsTableName    # replace with the table name you want to access (attention: often the table name is uppercased!)
+NEXT_SECRET_GRIST_LABELS_TABLE=LabelsTabel          # replace with the table name you want to access (attention: often the table name is uppercased!)
+NEXT_SECRET_GRIST_TEXTS_TABLE=TextsTableName        # replace with the table name you want to access (attention: often the table name is uppercased!)
+NEXT_SECRET_GRIST_API_KEY=your-secret-api-key       # keep this private!
+NEXT_PUBLIC_MAPTILER_API_KEY=your-maptiler-api-key  # make sure to restrict this API key to the domains you're deploying to (it's visible to the public)
 NEXT_PUBLIC_MAPTILER_STYLE_URL=https://api.maptiler.com/maps/bright/style.json
+NEXT_SECRET_BASIC_AUTH_USER=foo
+NEXT_SECRET_BASIC_AUTH_PASSWORD=one-secret-password
