--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,8 @@
     "./src/**/*.tsx",
     "./pages/**/*.ts",
     "./pages/**/*.tsx",
-    "./scripts/createFakeGristData.ts"
+    "./scripts/createFakeGristData.ts",
+    "./middleware.ts"
   ],
   "exclude": [
     "node_modules",
