feat(WEG-55): add basic about/info page
Attention, this is very quick and dirty because of time constraints. Ideally, the texts should be defined in Grist and fetched from there.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
+    "@tailwindcss/typography": "0.5.7",
     "@technologiestiftung/semantic-release-config": "1.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
