--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "next": "12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sanitize-html": "2.7.3",
     "swiper": "8.4.3",
     "use-debounce": "8.0.4"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
-    "@tailwindcss/typography": "0.5.7",
     "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.7",
     "@technologiestiftung/semantic-release-config": "1.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
@@ -34,6 +35,7 @@
     "@types/node": "17.0.21",
     "@types/node-fetch": "2.6.2",
     "@types/react": "17.0.50",
+    "@types/sanitize-html": "2.6.2",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "autoprefixer": "10.4.12",
