docs(README): Add missing contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,7 +17,41 @@
       "profile": "https://github.com/dnsos",
       "contributions": [
         "code",
+        "design",
         "doc"
+      ]
+    },
+    {
+      "login": "vogelino",
+      "name": "Lucas Vogel",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2759340?v=4",
+      "profile": "https://vogelino.com",
+      "contributions": [
+        "code",
+        "design",
+        "doc"
+      ]
+    },
+    {
+      "login": "ff6347",
+      "name": "Fabian Morón Zirfas",
+      "avatar_url": "https://avatars.githubusercontent.com/u/315106?v=4",
+      "profile": "https://fabianmoronzirfas.me/",
+      "contributions": [
+        "code",
+        "data",
+        "infra"
+      ]
+    },
+    {
+      "login": "Esshahn",
+      "name": "Ingo Hinterding",
+      "avatar_url": "https://avatars.githubusercontent.com/u/434355?v=4",
+      "profile": "http://www.awsm.de/",
+      "contributions": [
+        "content",
+        "review",
+        "mentoring"
       ]
     }
   ],
