--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "downloadCacheData": "npx ts-node src/scripts/downloadCacheData.ts"
   },
   "dependencies": {
+    "@headlessui/react": "1.7.8",
     "date-fns": "2.29.3",
     "maplibre-gl": "2.4.0",
     "next": "12.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sanitize-html": "2.7.3",
     "swiper": "8.4.5",
-    "use-debounce": "9.0.2",
-    "sanitize-html": "2.7.3"
+    "use-debounce": "9.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
-    "@tailwindcss/typography": "0.5.9",
     "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.9",
     "@technologiestiftung/semantic-release-config": "1.2.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
@@ -35,10 +36,10 @@
     "@types/node": "17.0.21",
     "@types/node-fetch": "2.6.2",
     "@types/react": "17.0.53",
+    "@types/sanitize-html": "2.8.0",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
     "autoprefixer": "10.4.13",
-    "@types/sanitize-html": "2.8.0",
     "babel-plugin-inline-react-svg": "2.0.1",
     "dotenv": "16.0.3",
     "eslint": "8.33.0",
