--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "17.0.21",
+    "@types/detect-character-encoding": "0.7.0",
+    "@types/iconv": "3.0.1",
+    "@types/node": "18.17.1",
     "@types/node-fetch": "2.6.3",
     "@types/react": "17.0.58",
     "@types/sanitize-html": "2.9.0",
@@ -42,6 +44,8 @@
     "@typescript-eslint/parser": "5.59.0",
     "autoprefixer": "10.4.14",
     "babel-plugin-inline-react-svg": "2.0.2",
+    "csv-parser": "3.0.0",
+    "detect-character-encoding": "0.8.0",
     "dotenv": "16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "12.3.4",
@@ -51,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
+    "iconv": "3.0.1",
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.3",
     "jest-fetch-mock": "3.0.3",
