docs: Add data url for open data to env example

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ NEXT_PUBLIC_MAPTILER_API_KEY=your-maptiler-api-key  # make sure to restrict this
 NEXT_PUBLIC_MAPTILER_STYLE_URL=https://api.maptiler.com/maps/bright/style.json
 NEXT_SECRET_BASIC_AUTH_USER=foo
 NEXT_SECRET_BASIC_AUTH_PASSWORD=one-secret-password
-NEXT_PUBLIC_MATOMO_SITE_ID="0" # only required in production setup
+NEXT_PUBLIC_MATOMO_SITE_ID="0"                     # only required in production setup
 NEXT_PUBLIC_MATOMO_URL="https://matomo.example.de" # only required in production setup
+NEXT_PUBLIC_DATA_URL=https://www.berlin.de/lb/psychiatrie/_assets/service/daten/datensatz_hilf-mir_berlin.csv
