--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest-environment-jsdom": "28.1.3",
     "jest-fetch-mock": "3.0.3",
     "node-fetch": "2.6.12",
+    "osmtogeojson": "3.0.0-beta.5",
     "postcss": "8.4.27",
     "prettier": "2.8.8",
     "tailwindcss": "3.3.3",
