--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,17 @@ data/*.json
 !data/railways*.json
 
 .vscode/settings.json
+.vscode/spellright.dict
+data/GTFS/agency.txt
+data/GTFS/calendar_dates.txt
+data/GTFS/calendar.txt
+data/GTFS/frequencies.txt
+data/GTFS/levels.txt
+data/GTFS/pathways.txt
+data/GTFS/README.md
+data/GTFS/routes.txt
+data/GTFS/shapes.txt
+data/GTFS/stop_times.txt
+
+data/GTFS/transfers.txt
+data/GTFS/trips.txt
